fixed bug where classes not showing in members

--- a/static/style.css
+++ b/static/style.css
@@ -141,7 +141,7 @@ ul {
 }
 
 li {
-    padding: 15px 0 15px 0;
+    padding: 15px 0 15px 10px;
     transition: 1s;
 }
 
